fixes some spacing errors on tablet

--- a/src/components/Blog/AllPosts/AllPosts.module.scss
+++ b/src/components/Blog/AllPosts/AllPosts.module.scss
@@ -2,7 +2,7 @@
 
 .AllPosts {
   margin: $spaceM auto;
-  width: 100%;
+  width: 100vw;
   max-width: $contentWidthL;
 }
 
