--- a/src/components/Blog/PostCard/PostCard.module.scss
+++ b/src/components/Blog/PostCard/PostCard.module.scss
@@ -3,8 +3,8 @@
 .PostCard {
   @include flex(column, flex-start, flex-start);
   margin: $spaceM;
-  width: 90%;
-  height: 45rem;
+  width: 80%;
+  height: 50rem;
   max-width: 40rem;
 
   @include min-width(1000px) {
