--- a/src/components/Blog/Sidebar/Sidebar.module.scss
+++ b/src/components/Blog/Sidebar/Sidebar.module.scss
@@ -62,10 +62,19 @@
     width: 90%;
 
     h1 {
-      @include font("SSM");
+      @include font("S");
 
       font-weight: 300;
-      letter-spacing: 0.4rem;
+      letter-spacing: 0rem;
+      text-align: center;
+
+      @include min-width(1000px) {
+        text-align: left;
+      }
+
+      @include min-width(1200px) {
+        @include font("SSM");
+      }
     }
 
     p {
